--- a/frontend/src/components/headerbar.module.css
+++ b/frontend/src/components/headerbar.module.css
@@ -4,6 +4,7 @@
   height: var(--header-height);
   width: 100%;
   margin-left: var(--sidebar-width);
+  z-index: 99;
   text-align: left;
   background: white;
   box-shadow: 0px 1px 10px lightgray;
