--- a/frontend/src/components/sidenavigation.module.css
+++ b/frontend/src/components/sidenavigation.module.css
@@ -10,7 +10,7 @@
   top: 0;
   /* Stay at the top */
   left: 0;
-  background-color: #503457;
+  background-color: #562f60;
   /* TODO: Color Scheme */
   overflow-x: hidden;
   /* Disable horizontal scroll */
