--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -3,6 +3,12 @@ html {
   --header-height: 60px;
 }
 
+@media screen and (max-width: 768px) {
+  html {
+    --sidebar-width: 0px;
+  }
+}
+
 body {
   padding: 0;
   margin: 0;
